<resources>
    <string name="app_name">TMT</string>
    <string name="login">Login</string>
    <string name="username">User Name</string>
    <string name="usernameEn">User Name In English</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="password">PassWord</string>
    <string name="continuation">continue</string>
    <string name="forgetPass"> Forgot your username or password?</string>
    <string name="Email">Email</string>
    <string name="wrong">Wrong</string>
    <string name="enterTheUserName">Enter The User Name</string>
    <string name="man">man</string>
    <string name="me">For Me</string>
    <string name="gender">gender</string>
    <string name="antherPerson">to someone else</string>
    <string name="dataOfPairth">date of birth</string>
    <string name="forgetData">Did you Forget user name or password</string>
    <string name="noAccount"> you don\'t have an account ?</string>
    <string name="createNewAccount">Register a new account</string>
    <string name="Buy">pay now</string>
    <string name="askForcons">Request immediate advice now</string>
    <string name="areYouDoc"> Are You A Doctor ?</string>
    <string name="docApp"> Download Doctor  App</string>
    <string name="English">English</string>
    <string name="AR">عربي</string>
    <string name="Tr">Türkçe</string>
    <string name="confirmPhone">Authenticate your mobile phone</string>
    <string name="MediaclSpecialties">Medical specialties </string>
    <string name="confirm">Authenticate your phone </string>
    <string name="entrOtp">Please type the verification code</string>
    <string name="entrOtpTp"> send me </string>
    <string name="reSend"> أرسل إلى </string>
    <string name="speciality">Subspecialties</string>
    <string name="speedCare">urgent care</string>
    <string name="Spiecificspeciality">Subspecialties</string>
    <string name="weCanHelp">How can we help you ?</string>
    <string name="skip"> Skip</string>
    <string name="HealthCare"> Health Care</string>
    <string name="mentality">Ask for a psychiatric consultation or a behavioral therapy session from a group of psychiatrists and behavioral therapists</string>
    <string name="Psychologicalhealth"> Psychological health</string>
    <string name="askForSpeciality">Request specialized medical advice in more than 30 different clinics served by a group of specialists and consultants</string>
    <string name="getHelp">speak now</string>
    <string name="yourHealth">Your Health Our Priority</string>
    <string name="phoneNumber">phone number </string>
    <string name="defaultCodeNum">+966</string>
    <string name="NumConfirm">Send the authentication code</string>
    <string name="InstantConsultation">Instant Consultation</string>
    <string name="discripeYourProblem">Write a brief description of your consultation (optional):</string>
    <string name="foryouOrnot">Is the advice for you or for someone else?</string>
    <string name="home">Home</string>
    <string name="healthyDetails">Weekly scheduled sessions with experts to build a healthy lifestyle and achieve your various treatment goals</string>
    <string name="notifications">Notifiaction</string>
    <string name="profile">Profile</string>
    <string name="age">age</string>
    <string name="payment">payment</string>
    <string name="PsychologicalHealth">Psychological Health</string>
    <string name="numOfCources">عدد الجلسات: 3</string>
    <string name="doctors_list">قائمة الأطباء</string>
    <string name="doc_of_this_week">تميزوا هذا الاسبوع</string>
    <string name="doc_in_6">يستجيبون خلال 6 ساعات</string>
    <string name="doc_in_24">يستجيبون خلال 24 ساعة</string>
    <string name="user_experience">تجارب المستخدمين</string>
    <string name="related_topics">برامج عناية بالصحة ذات علاقة</string>
    <string name="compelement">شكاوي صحية شائعة</string>
    <string name="common_deciessis">الأمراض الشائعة</string>
    <string name="doc_in_general">متخصصون في طب عام</string>
    <string name="doc_in_familys">متخصصون في طب أسرة</string>
    <string name="doc_in_care">متخصصون في طب وقائي</string>
    <string name="geriatrics_specialists">متخصصون في طب الشيخوخة</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>