<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="5dp"
    android:layout_margin="10dp"
    android:background="@drawable/shape_round_out_line"
    >

    <com.google.android.material.imageview.ShapeableImageView
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:src="@drawable/follower_doc"
        android:scaleType="fitXY"
        android:theme="@style/roundedImage"
        android:layout_margin="5dp"
        />
    <TextView
        android:fontFamily="@font/tajwal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_gravity="end"
        android:paddingHorizontal="10dp"
        android:gravity="center"
        android:text="@string/PsychologicalHealth"
        android:textColor="@color/textColor"
        android:textSize="18sp"
        android:textStyle="bold" />
 <TextView
        android:fontFamily="@font/tajwal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_gravity="end"
        android:paddingHorizontal="10dp"
        android:text="@string/discripeYourProblem"
        android:textColor="@color/textColor"
        android:textSize="14sp"
        android:textStyle="normal" />

    <TextView
        android:fontFamily="@font/tajwal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_gravity="end"
        android:paddingHorizontal="10dp"
        android:gravity="center"
        android:text="@string/numOfCources"
        android:textColor="@color/textColor"
        android:textSize="18sp"
        android:textStyle="bold" />
</LinearLayout>