<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:background="#fff"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/wrong"
                android:gravity="center"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:padding="5dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/enterTheUserName"
                android:gravity="center"
                android:textSize="14sp"
                android:textColor="@color/appColor"
                android:textStyle="normal"
                android:padding="5dp"
                android:layout_marginTop="15dp"
                />
            <TextView
                android:id="@+id/loginBtn"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="35dp"
                android:layout_marginEnd="40dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/shape_round_orang"
                android:gravity="center"
                android:text="@string/continuation"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>