<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.fragment.auth.auth.forgetpass.ForgetPasswordFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/back" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginStart="10dp"
            android:padding="10dp"
            android:text="@string/forgetPass"
            android:textColor="@color/textColor"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginStart="10dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="40dp"
        android:gravity="center"
        android:hint="قم بادخال البريد الالكتروني الذي استخدمته
 في التسجيل"
        android:padding="10dp"
        android:textColor="@color/textColor"
        android:textSize="14sp"
        android:textStyle="normal" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/shape_round_white"
        android:elevation="1dp"
        android:hint="@string/Email"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:maxLines="1"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textAlignment="center"
        android:textColor="@color/gray"
        android:textColorHint="@color/gray"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/loginBtn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/shape_round_orang"
        android:gravity="center"
        android:text="@string/continuation"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold" />


</LinearLayout>