<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.fragment.otp.OtpFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:orientation="horizontal"
        android:padding="5dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/back" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginStart="10dp"
            android:padding="10dp"
            android:text="@string/confirm"
            android:textColor="@color/textColor"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginStart="10dp"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/confirm"
        android:textColor="@color/textColor"
        android:textSize="22sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/entrOtp"
        android:textColor="@color/textColor"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/entrOtpTp"
        android:textColor="@color/textColor"
        android:textSize="18sp"
        android:textStyle="bold" />

    <com.chaos.view.PinView
        android:id="@+id/firstPinView"
        style="@style/PinWidget.PinView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:cursorVisible="true"
        android:hint="Hint."
        android:inputType="text"
        android:layout_gravity="center"
        android:padding="5dp"
        android:textColor="@color/textColor"
        android:textSize="18sp"
        android:textStyle="bold"
        app:itemCount="4"
        app:cursorColor="@color/black"
        app:cursorWidth="2dp"
        app:hideLineWhenFilled="true"
        app:itemHeight="48dp"
        app:itemRadius="4dp"
        app:itemSpacing="25dp"
        app:itemWidth="48dp"
        app:lineColor="@color/appColor"
        app:lineWidth="2dp"
        app:viewType="rectangle"
        />

    <TextView
        android:id="@+id/loginBtn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/shape_round_orang"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/entrOtpTp"
            android:textColor="@color/appColor"
            android:textSize="18sp"
            android:textStyle="bold" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/entrOtpTp"
            android:textColor="@color/textColor"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>