<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".presentation.fragment.rejester.SigenUpFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:orientation="horizontal"
        android:padding="5dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/back" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginStart="10dp"
            android:padding="10dp"
            android:text="@string/confirmPhone"
            android:textColor="@color/textColor"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/EtUserName"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="15dp"
            android:layout_weight="1"
            android:background="@drawable/shape_round_white"
            android:elevation="1dp"
            android:hint="@string/username"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLines="1"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:textAlignment="center"
            android:textColor="#364C61"
            android:textColorHint="#364C61" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="30dp"
            android:layout_weight="1"
            android:background="@drawable/shape_round_white"
            android:elevation="1dp"
            android:hint="@string/username"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLines="1"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:textAlignment="center"
            android:textColor="#364C61"
            android:textColorHint="#364C61" />

    </LinearLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/shape_round_white"
        android:elevation="1dp"
        android:hint="@string/username"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:maxLines="1"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textAlignment="center"
        android:textColor="#364C61"
        android:textColorHint="#364C61" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/shape_round_white"
        android:elevation="1dp"
        android:hint="@string/username"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:maxLines="1"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textAlignment="center"
        android:textColor="#364C61"
        android:textColorHint="#364C61" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/shape_round_white"
        android:elevation="1dp"
        android:hint="@string/username"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:maxLines="1"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textAlignment="center"
        android:textColor="#364C61"
        android:textColorHint="#364C61" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        >

        <com.google.android.material.card.MaterialCardView
            android:layout_width="14dp"
            android:layout_height="14dp"
            android:layout_gravity="center"
            android:layout_marginStart="30dp"
            app:contentPaddingRight="50dp"
            app:cardCornerRadius="40dp"
            app:strokeWidth="3dp"
            app:strokeColor="@color/textColor"
            />

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            app:shapeAppearance="@style/circleImage"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:layout_gravity="center"
            />
    </LinearLayout>
    <TextView
        android:id="@+id/loginBtn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/shape_round_orang"
        android:layout_marginStart="30dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="30dp"
        android:text="@string/login"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@color/white"
        />

</LinearLayout>